--- a/marketspace/mobile/package.json
+++ b/marketspace/mobile/package.json
@@ -16,7 +16,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.0"
   },
   "private": true
 }
