--- a/marketspace/mobile/package.json
+++ b/marketspace/mobile/package.json
@@ -9,14 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/karla": "^0.2.3",
     "expo": "~48.0.11",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.71.6",
     "babel-plugin-module-resolver": "^5.0.0"
   },
   "private": true
