--- a/marketspace/mobile/package.json
+++ b/marketspace/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
+    "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
