--- a/marketspace/mobile/package.json
+++ b/marketspace/mobile/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.71.6",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.0.0"
